Folders offer the possibility of changing permissions in trash
Steps to reproduce
- Trash a couple of folders
- Select at least 2 folders in trash:///
- Open context menu, hit properties.
- Notice there's a window allowing us to change permissions of the selected folders.
Reproducible in:
-
Flatpak unstable -
Other:
Current behavior
There's a menu allowing us to change the permissions of directories.
Expected behavior
Not sure we really need this, or if it helps anyone. It even complicates things further if we want to change permissions and restore the directory back.
Since we're talking about context menu in trash, the properties option displays "Modified" and "Accessed" labels, which display the time fine if it's the same for all selected items. However, if there's 2 items with different Modified/Accessed dates, "-" is displayed, which is not very useful information.
Edited by Alexandru Fazakas