properties-window: Don't change permissions in Trash

Currently there is a menu which allows changing the permissions
for trashed files.

This is unintended behaviour since changing the permissions for
trashed files is not supported anyway, resulting in an error
message or even Segmentation Fault.

This patch solves this issue by removing the permission access
menu for trashed files.

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/432